--- a/aboutme.css
+++ b/aboutme.css
@@ -1054,8 +1054,9 @@ html {
   }
   .iconimag3{
     width: 1.5vw;
-  object-fit: scale-down;
-  margin-left: 1rem;
+    object-fit: contain;
+    border-radius: 50%;
+    margin-left: 1rem;
   }
   .iconimag3 img:hover
   {
