--- a/repomaincss.css
+++ b/repomaincss.css
@@ -1419,8 +1419,10 @@ a.newer-posts:hover {
   }
   
   .iconimag3{
-    margin-top: 1rem;
-    width: 5vh;
+    width: 1.5vw;
+    object-fit: contain;
+    border-radius: 50%;
+    margin-left: 1rem; 
   }
   .content-box {
     padding: 20px 10px;
