--- a/subpage1main.css
+++ b/subpage1main.css
@@ -1055,7 +1055,8 @@ table tfoot td {
 .iconimag3{
   width: 1.5vw;
   /* height: 15%; */
-  object-fit: scale-down;
+  object-fit: contain;
+  border-radius: 50%;
   margin-left: 1rem;
   /* -webkit-transition: all 350ms cubic-bezier(0.13, 0.43, 0.54, 1.82); */
   /* -o-transition: all 350ms cubic-bezier(0.13, 0.43, 0.54, 1.82); */
@@ -1447,7 +1448,7 @@ footer .copyright {
   
   /* - - - - - - - - - - Media Styles - - - - - - - - - - */
   /* Medium Devices, Desktops */
-  @media only screen and (max-width: 992px) {
+  @media only screen and (max-width: 990px) {
     .post {
       width: 48%;
       max-width: 100%;
@@ -1490,7 +1491,6 @@ footer .copyright {
           -ms-flex-pack: justify;
               justify-content: space-between;
       width: 100%;
-      height: 60vh;
       padding: 10px;
       background-color: #ffffff;
       -webkit-box-shadow: 0 1px 1px 0 rgba(31, 35, 46, 0.15);
@@ -1539,7 +1539,7 @@ footer .copyright {
       display: none;
     }
   }
-   
+  
   /* Extra Small Devices, Phones */
   @media only screen and (max-width: 480px) {
     .content-box {
@@ -1568,4 +1568,3 @@ footer .copyright {
       font-size: 21px;
     }
   }
-  
