--- a/subpage1main.css
+++ b/subpage1main.css
@@ -5,6 +5,7 @@ html {
   /* 2 */
   -webkit-text-size-adjust: 100%;
   /* 2 */
+  font-size: 1rem;
 }
 
 /* Sections
@@ -877,6 +878,7 @@ table tfoot td {
 
 .wrapper {
   max-width: 1250px;
+  /* width: 100%; */
   position: relative;
 }
 
@@ -931,6 +933,7 @@ table tfoot td {
 .about {
   margin: 0 0 40px;
   text-align: center;
+  font-size: 2rem;
 }
 
 .about .cover-author-image {
@@ -987,7 +990,7 @@ table tfoot td {
 }
 
 .about p {
-  font-size: 16px;
+  font-size: 15px;
   margin: 0 0 10px;
 }
 
@@ -1257,7 +1260,7 @@ footer .copyright {
     margin: 0;
     background-color: blueviolet;
     width: 100%;
-    height: 20rem;
+    /* height: 20rem; */
     max-height: 500px;
     background-color: #fafafa;
     /* overflow: hidden; */
@@ -1284,7 +1287,8 @@ footer .copyright {
   
   .page-cover-image .page-image {
     width: 100%;
-    height: 100%;
+    /* height: 100%; */
+    height: 48vh;
     
     object-fit: scale-down;
   }
@@ -1297,41 +1301,34 @@ footer .copyright {
     flex-direction: row;
     
   }
-  .conimgwrapper{
-    width: 50%;
-  }
+.comb{
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  /* justify-items: center; */
+  /* margin: 2%; */
+  height: 25rem;
+}
+.comb img{
 
-  .con1{
-    padding-left: 1rem;
-    padding-top: 1rem;
-    float: left;
-    width: 80%;
-    box-sizing: border-box;
-    
-   
+      object-fit: contain;
+      /* margin: 0% auto; */
+      width: 80%;
+      height: 80%;
+      /* box-shadow: 0 15px 45px -10px rgba(10, 16, 34, 0.2); */
   }
-
-  .con1 :after{
-    top:21rem;
-    content: "Figure 2: GeoSLAM performing mapping";
+  .comb div{
+    display: grid;
+    place-items: center;
   }
-  .con2{
-    padding-top: 1rem;
-    padding-right: 1rem;
-    float: right;
-    height: 70%;
-    width: 42%;
-    box-sizing: border-box;
+  .imgs{
+  object-fit: contain;
+  margin: 0% auto;
+  width: 80%;
   }
- 
-  .con2 :after{
-    top: 21rem;
-    content: "Figure 3: SLAM results";
-   } 
-  .conimg img{
-    object-fit: contain;
+  
+  .format{
+      font-weight: 900;
   }
- 
   .page-footer {
     display: -webkit-box;
     display: -webkit-flex;
@@ -1448,7 +1445,8 @@ footer .copyright {
   
   /* - - - - - - - - - - Media Styles - - - - - - - - - - */
   /* Medium Devices, Desktops */
-  @media only screen and (max-width: 990px) {
+  @media only screen and (max-width: 992px) {
+    
     .post {
       width: 48%;
       max-width: 100%;
@@ -1459,6 +1457,11 @@ footer .copyright {
           -ms-flex-direction: column;
               flex-direction: column;
     }
+    .imgs{
+      object-fit: contain;
+      margin: 0% auto;
+      height: 80%;
+      }
     .post .post-thumbnail {
       width: 100%;
     }
@@ -1471,10 +1474,34 @@ footer .copyright {
     .post .post-content .post-title a {
       font-size: 21px;
     }
+  
   }
   
   /* Small Devices, Tablets */
   @media only screen and (max-width: 768px) {
+    *{
+      font-size: 1.5rem;
+    }
+    .readmore{
+      text-decoration: none;
+      color: #333030;
+      font-size: 1.3rem;
+      font-weight: 400;
+    }
+    
+    .resume{
+      font-size: 1.3rem;
+      font-weight: 400;
+      text-transform: uppercase;
+      color: #333030;
+    }
+    .about p{
+      font-size: 1.4rem;
+    }
+    .about .author-name
+    {
+      font-size: 1.6rem;
+    }
     .sidebar {
       position: relative;
       display: -webkit-box;
@@ -1500,9 +1527,11 @@ footer .copyright {
       margin-bottom: 10px;
     }
     .about {
+      
       text-align: center;
       max-width: 480px;
       margin: 10px auto auto;
+      /* font-size: 5rem; */
     }
     .about img {
       width: 100px;
@@ -1512,7 +1541,7 @@ footer .copyright {
       margin-bottom: 10px;
     }
     
-    .iconimag3{
+    .iconimag3 {
       margin-top: 1rem;
       width: 5vh;
     }
@@ -1542,8 +1571,18 @@ footer .copyright {
   
   /* Extra Small Devices, Phones */
   @media only screen and (max-width: 480px) {
+    *{
+      font-size: 1rem;
+    }
     .content-box {
       padding: 10px;
+    }
+    
+    .resume{
+      font-size: 1rem;
+      font-weight: 400;
+      text-transform: uppercase;
+      color: #333030;
     }
     .post {
       width: 98%;
@@ -1567,4 +1606,18 @@ footer .copyright {
     .post .post-content .post-title a {
       font-size: 21px;
     }
+    .comb{
+      grid-template-columns: 1fr;
+
+    }
+    .comb img{
+    
+          object-fit: contain;
+          width: 80%;
+          box-shadow: 0 15px 45px -10px rgba(10, 16, 34, 0.2);
+        
+      }
+      .imgs{
+        width: 100%;
+      }
   }
