--- a/subpage3.css
+++ b/subpage3.css
@@ -1061,11 +1061,6 @@ table tfoot td {
   object-fit: contain;
   border-radius: 50%;
   margin-left: 1rem;
-  /* -webkit-transition: all 350ms cubic-bezier(0.13, 0.43, 0.54, 1.82); */
-  /* -o-transition: all 350ms cubic-bezier(0.13, 0.43, 0.54, 1.82); */
-  /* transition: all 350ms cubic-bez-webkit-transform: scale(1.2); */
-          /* transform: scale(1.2);
-          transform: scale(1.2);ier(0.13, 0.43, 0.54, 1.82); */
 }
 .iconimag3 img:hover
 {
@@ -1260,7 +1255,7 @@ footer .copyright {
     margin: 0;
     background-color: blueviolet;
     width: 100%;
-    height: 12rem;
+    /* height: 20rem; */
     max-height: 500px;
     background-color: #fafafa;
     /* overflow: hidden; */
@@ -1282,13 +1277,11 @@ footer .copyright {
     font-weight: 700;
     text-transform: uppercase;
     font-size: 10px;
-    /* box-sizing: border-box; */
   }
   
   .page-cover-image .page-image {
     width: 100%;
-    height: 100%;
-    /* height: 48vh; */
+    height: 48vh;
     
     object-fit: scale-down;
   }
@@ -1304,65 +1297,19 @@ footer .copyright {
 .comb{
   display: grid;
   grid-template-columns: 1fr 1fr;
-  place-items: center;
 }
 .comb img{
 
+      margin: 0% auto;
       width: 80%;
-      /* box-shadow: 0 15px 45px -10px rgba(10, 16, 34, 0.2); */
   }
   .imgs{
   object-fit: contain;
-  margin: 2% auto;
-  width: 60%;
-  }
-  .video{
-    margin: 2%;
-    display: grid;
-    place-items: center;
-  }
-  .colord
-  {
-    
-  object-fit: contain;
-  margin: 2% auto;
-    width: 50%;
-  }
-  .conimgwrapper{
-    width: 50%;
+  margin: 0% auto;
+  width: 80%;
   }
   .format{
       font-weight: 900;
-  }
-  .con1{
-    padding-left: 1rem;
-    padding-top: 1rem;
-    float: left;
-    width: 80%;
-    box-sizing: border-box;
-    
-   
-  }
-
-  .con1 :after{
-    top:21rem;
-    content: "Figure 2: GeoSLAM performing mapping";
-  }
-  .con2{
-    padding-top: 1rem;
-    padding-right: 1rem;
-    float: right;
-    height: 70%;
-    width: 42%;
-    box-sizing: border-box;
-  }
- 
-  .con2 :after{
-    top: 21rem;
-    content: "Figure 3: SLAM results";
-   } 
-  .conimg img{
-    object-fit: contain;
   }
  
   .page-footer {
@@ -1573,7 +1520,6 @@ footer .copyright {
       text-align: center;
       max-width: 480px;
       margin: 10px auto auto;
-      /* font-size: 5rem; */
     }
     .about img {
       width: 100px;
@@ -1614,17 +1560,7 @@ footer .copyright {
   /* Extra Small Devices, Phones */
   @media only screen and (max-width: 480px) {
     *{
-      font-size: 1.2rem;
-    }
-    .page-cover-image
-    {
-      height: 10rem;
-    }
-    .page-cover-image .page-image
-    {
-      height: 20vh;
-      object-fit: fill;
-      
+      font-size: 1rem;
     }
     .content-box {
       padding: 10px;
@@ -1659,20 +1595,20 @@ footer .copyright {
       font-size: 21px;
     }
     .comb{
-      grid-template-columns: 1fr;
-      row-gap: 2%;
+      display: inline;
     }
     .comb img{
+    
           object-fit: contain;
           width: 100%;
+          margin: 3%;
+        
       }
-      .video iframe{
-        width: 80vw;
-        height: 30vh;
-      }
-
       .imgs{
         width: 100%;
-        height: 100%;
+        margin: 3%;
+      }
+      .problem{
+        height: 15vh;
       }
   }
