--- a/Css/subpage1main.css
+++ b/Css/subpage1main.css
@@ -5,7 +5,7 @@ html {
   /* 2 */
   -webkit-text-size-adjust: 100%;
   /* 2 */
-  font-size: 1rem;
+  font-size: 18px;
 }
 
 /* Sections
@@ -34,7 +34,7 @@ section {
  * `article` contexts in Chrome, Firefox, and Safari.
  */
 h1 {
-  font-size: 2em;
+  font-size: 1.5em;
   margin: 0.67em 0;
 }
 
@@ -1057,15 +1057,9 @@ table tfoot td {
 }
 .iconimag3{
   width: 1.5vw;
-  /* height: 15%; */
   object-fit: contain;
   border-radius: 50%;
   margin-left: 1rem;
-  /* -webkit-transition: all 350ms cubic-bezier(0.13, 0.43, 0.54, 1.82); */
-  /* -o-transition: all 350ms cubic-bezier(0.13, 0.43, 0.54, 1.82); */
-  /* transition: all 350ms cubic-bez-webkit-transform: scale(1.2); */
-          /* transform: scale(1.2);
-          transform: scale(1.2);ier(0.13, 0.43, 0.54, 1.82); */
 }
 .iconimag3 img:hover
 {
@@ -1078,16 +1072,9 @@ table tfoot td {
   padding: 0;
   list-style: none;
   text-align: center;
-}
-
-.contact ul li {
-  display: flex;
-  flex-direction: column;
-  margin-left: 10px;
-}
-
-.contact ul li:first-child {
-  margin-left: 0;
+  margin-left: -10px;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
 }
 
 .contact ul li a {
@@ -1260,16 +1247,16 @@ footer .copyright {
     margin: 0;
     background-color: blueviolet;
     width: 100%;
-    height: 12rem;
+    height: 20rem;
     max-height: 500px;
     background-color: #fafafa;
-    /* overflow: hidden; */
     box-sizing: border-box;
   }
   
   .page-cover-image figure {
     position: relative;
     margin: 0;
+    
   }
   
   .page-cover-image figcaption {
@@ -1287,8 +1274,8 @@ footer .copyright {
   
   .page-cover-image .page-image {
     width: 100%;
-    height: 100%;
-    /* height: 48vh; */
+    /* height: 100%; */
+    height: 48vh;
     
     object-fit: scale-down;
   }
@@ -1306,65 +1293,25 @@ footer .copyright {
   grid-template-columns: 1fr 1fr;
   place-items: center;
 }
-.comb img{
+.comb div img{
 
+      object-fit: contain;
       width: 80%;
-      /* box-shadow: 0 15px 45px -10px rgba(10, 16, 34, 0.2); */
+      height: 300px;
+  }
+  .comb div{
+    display: grid;
+    place-items: center;
   }
   .imgs{
   object-fit: contain;
   margin: 2% auto;
-  width: 60%;
+  width: 70%;
   }
-  .video{
-    margin: 2%;
-    display: grid;
-    place-items: center;
-  }
-  .colord
-  {
-    
-  object-fit: contain;
-  margin: 2% auto;
-    width: 50%;
-  }
-  .conimgwrapper{
-    width: 50%;
-  }
+  
   .format{
       font-weight: 900;
   }
-  .con1{
-    padding-left: 1rem;
-    padding-top: 1rem;
-    float: left;
-    width: 80%;
-    box-sizing: border-box;
-    
-   
-  }
-
-  .con1 :after{
-    top:21rem;
-    content: "Figure 2: GeoSLAM performing mapping";
-  }
-  .con2{
-    padding-top: 1rem;
-    padding-right: 1rem;
-    float: right;
-    height: 70%;
-    width: 42%;
-    box-sizing: border-box;
-  }
- 
-  .con2 :after{
-    top: 21rem;
-    content: "Figure 3: SLAM results";
-   } 
-  .conimg img{
-    object-fit: contain;
-  }
- 
   .page-footer {
     display: -webkit-box;
     display: -webkit-flex;
@@ -1510,35 +1457,29 @@ footer .copyright {
     .post .post-content .post-title a {
       font-size: 21px;
     }
-    .imgs{
-
-      object-fit: contain;
-      margin: 0% auto;
-      width: 70%;
-  }
   
   }
   
   /* Small Devices, Tablets */
   @media only screen and (max-width: 768px) {
     *{
-      font-size: 1.5rem;
+      font-size: 1.2rem;
     }
     .readmore{
       text-decoration: none;
       color: #333030;
-      font-size: 1.3rem;
+      font-size: .9rem;
       font-weight: 400;
     }
     
     .resume{
-      font-size: 1.3rem;
+      font-size: .9rem;
       font-weight: 400;
       text-transform: uppercase;
       color: #333030;
     }
     .about p{
-      font-size: 1.4rem;
+      font-size: 1rem;
     }
     .about .author-name
     {
@@ -1573,7 +1514,7 @@ footer .copyright {
       text-align: center;
       max-width: 480px;
       margin: 10px auto auto;
-      /* font-size: 5rem; */
+  
     }
     .about img {
       width: 100px;
@@ -1614,24 +1555,14 @@ footer .copyright {
   /* Extra Small Devices, Phones */
   @media only screen and (max-width: 480px) {
     *{
-      font-size: 1.2rem;
-    }
-    .page-cover-image
-    {
-      height: 10rem;
-    }
-    .page-cover-image .page-image
-    {
-      height: 20vh;
-      object-fit: fill;
-      
+      font-size: 1rem;
     }
     .content-box {
       padding: 10px;
     }
     
     .resume{
-      font-size: 1rem;
+      font-size: .8rem;
       font-weight: 400;
       text-transform: uppercase;
       color: #333030;
@@ -1648,7 +1579,11 @@ footer .copyright {
     }
     .post .post-thumbnail {
       width: 100%;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
     }
+    
     .post .post-content {
       width: 100%;
     }
@@ -1660,19 +1595,20 @@ footer .copyright {
     }
     .comb{
       grid-template-columns: 1fr;
-      row-gap: 2%;
+
     }
     .comb img{
+    
           object-fit: contain;
-          width: 100%;
+          width: 80%;
+          
+        
       }
-      .video iframe{
-        width: 80vw;
-        height: 30vh;
-      }
+      .comb div{
 
+        margin-bottom: 20px;
+      }
       .imgs{
         width: 100%;
-        height: 100%;
       }
   }
