--- a/Css/subpage1main.css
+++ b/Css/subpage1main.css
@@ -1274,10 +1274,10 @@ footer .copyright {
   
   .page-cover-image .page-image {
     width: 100%;
-    /* height: 100%; */
-    height: 48vh;
+    height: 100%;
+/*     height: 48vh; */
     
-    object-fit: scale-down;
+    object-fit: contain;
   }
   .conimg{
     padding: 0;
