--- a/Css/subpage1main.css
+++ b/Css/subpage1main.css
@@ -1274,8 +1274,7 @@ footer .copyright {
   
   .page-cover-image .page-image {
     width: 100%;
-    height: 100%;
-/*     height: 48vh; */
+    height: 48vh;
     
     object-fit: contain;
   }
