--- a/Css/subpage1main.css
+++ b/Css/subpage1main.css
@@ -1274,9 +1274,8 @@ footer .copyright {
   
   .page-cover-image .page-image {
     width: 100%;
-    height: 48vh;
-    
-    object-fit: contain;
+    height: 100%;
+    object-fit: scale-down;
   }
   .conimg{
     padding: 0;
